# organ_donor

./: .gitignore  README.md  pyproject.toml  test_melody.mid
notebooks/: midi_markov.ipynb
notebooks/examples/: midi_example_script.py
notebooks/experiments/: odds_and_ends.ipynb
tests/: test_midi_system.py
