[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "organ-donor"
version = "0.1.0"
description = "MIDI Markov Chain Composition System for Live Performance Analysis"
authors = ["Michelle Thompson <abraxas3d@openresearch.institute>", "Frank Brickle"]
readme = "README.md"
packages = [{include = "organ_donor", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^1.24.0"
mido = "^1.3.3"
python-rtmidi = "^1.5.8"
jupyterlab = "^4.0"
matplotlib = "^3.7"
plotly = "^5.17"   
ipywidgets = "^8.1"
seaborn = "^0.12"
pandas = "^2.0"               # Helpful for data analysis in notebooks
scipy = "^1.10"               # For advanced entropy/statistical calculations

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
mypy = "^1.0"
jupyterlab = "^4.4.3"        # Latest version for dev

[tool.poetry.scripts]
organ-donor = "organ_donor.cli:main"

# Jupyter configuration
[tool.jupyter.lab]
# Add any Jupyter Lab extensions you want pre-installed
extensions = []

# Black code formatter configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  notebooks/.*\.ipynb
)/
'''

# MyPy type checker configuration  
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
